# machine-learning-zoomcamp-homework

./: introduction_to_pandas.ipynb
01-intro/: homework.ipynb  introduction_to_numpy.ipynb
02-car-price/: car_price.ipynb
02-regression/ml_homework_2/: ml_homework_2.ipynb
03-classification/: classification.ipynb  home_work_3.ipynb
06-trees/: car_fuel_hw.md  car_fuel_hw.py  credit_risk_scoring_project.ipynb  homework_6.ipynb  main.py  pyproject.toml
water-potability-ml/: Dockerfile  README.md  predict.py  pyproject.toml  schemas.py  test.py  train.py
water-potability-ml/notebooks/: water_potability.ipynb
